partial regeneration with claude haiku. couple of errors. anthropic throttles api requests and limits the number of output tokens, which cause some threads to crash and fail to generate code. need to do this in serial or something.